@startuml
'https://plantuml.com/sequence-diagram



class Budget {
    - double weeklyBudget
    - double monthlyExpenses
    - double weeklyExpenses
    - double dailyExpenses
    - LocalDate lastUpdatedDate
    + Budget()
    + void resetIfNeeded()
    + void resetWeeklyBudget(boolean carryOver)
    + void addWeeklyBudget(double amount)
    + void deductExpense(double amount)
    + void viewExpenses()
    + void saveBudgetData()
    + void loadBudgetData()
    + double getWeeklyBudget()
    + double getDailyExpenses()
    + double getMonthlyExpenses()
    + double getWeeklyExpenses()
    + LocalDate getLastUpdatedDate()
    + void setLastUpdatedDate(LocalDate lastUpdatedDate)
    + boolean isNewWeek(LocalDate today)
}

class BudgetParser {
    - static Budget budget
    - static Scanner scanner
    + BudgetParser(Budget budget)
    + static void start()
}

class Parser {
    - final Budget budget
    + Parser(Navi ui, Favorites favorites, Budget budget)
    + void handleCommand(String input)
}

BudgetParser --> Budget : uses
Parser --> Budget : uses

@enduml

